--- a/ECE521_A1.ipynb
+++ b/ECE521_A1.ipynb
@@ -355,6 +355,243 @@
     "delta = y - y_estimate\n",
     "print np.sum(np.power(delta, 2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with np.load(\"TINY_MNIST.npz\") as data:\n",
+    "    x, t = data[\"x\"], data[\"t\"]\n",
+    "    x_eval, t_eval = data[\"x_eval\"], data[\"t_eval\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 100.   52.]\n",
+      " [ 200.   39.]\n",
+      " [ 400.   36.]\n",
+      " [ 800.   31.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Task 5\n",
+    "# Assume minibatach of size 10\n",
+    "\n",
+    "# one loop\n",
+    "def grad_desc(x, t, w, minibatch_size, lamb=0, repeats=2000):\n",
+    "    w_result = np.zeros(w.shape[0])\n",
+    "    random_list = []\n",
+    "    for repeat in range(repeats):\n",
+    "        # generate minibatch\n",
+    "        random_batch = np.random.randint(x.shape[0], size=minibatch_size)\n",
+    "        random_list = np.concatenate((random_list, random_batch))\n",
+    "        x_copy = np.copy(x)\n",
+    "        t_copy = np.copy(t)\n",
+    "        x_copy = x_copy[random_batch]\n",
+    "        t_copy = t_copy[random_batch]\n",
+    "        \n",
+    "        # actual calculations\n",
+    "        y_estimate = x_copy.dot(w)\n",
+    "        y_estimate = y_estimate.reshape(y_estimate.shape[0], 1)\n",
+    "        delta = y_estimate - t_copy\n",
+    "\n",
+    "        derivatives = np.zeros(w.shape[0])\n",
+    "        for j in range(w.shape[0]):\n",
+    "            derivatives[j] = np.sum(delta * x_copy[:,j].reshape(x_copy.shape[0], 1)) + lamb*w[j]\n",
+    "        for j in range(w.shape[0]):\n",
+    "            w[j] -= 0.01*derivatives[j]\n",
+    "            \n",
+    "        w_result += w\n",
+    "        \n",
+    "    w[:] = np.copy(w_result)\n",
+    "    w /= repeats\n",
+    "    return np.unique(random_list)\n",
+    "\n",
+    "def task5():\n",
+    "    N_list = [100, 200, 400, 800]\n",
+    "    err_list = []\n",
+    "    minibatch_size = 10\n",
+    "    for N in N_list:\n",
+    "        x_copy = np.copy(x)\n",
+    "        x_copy = x_copy[0:N]\n",
+    "        t_copy = np.copy(t)\n",
+    "        t_copy = t_copy[0:N]\n",
+    "        \n",
+    "        # initialize w, since x is 64-D need +1 to make x0 = 1\n",
+    "        x_copy = np.column_stack((np.ones(x_copy.shape[0]), x_copy))\n",
+    "        w = np.random.rand(x_copy.shape[1])\n",
+    "\n",
+    "        grad_desc(x_copy, t_copy, w, minibatch_size)\n",
+    "        \n",
+    "        x_eval_copy = np.copy(x_eval)\n",
+    "        x_eval_copy = np.column_stack((np.ones(x_eval_copy.shape[0]), x_eval_copy))\n",
+    "        y_estimate = x_eval_copy.dot(w)\n",
+    "\n",
+    "        y_round = [0 if num < 0.5 else 1 for num in y_estimate]\n",
+    "        y_round = np.array(y_round)\n",
+    "        y_round = y_round.reshape((t_eval.shape[0], 1))\n",
+    "        \n",
+    "        err_list.append(np.sum(np.abs(t_eval - y_round)))\n",
+    "        \n",
+    "    print np.column_stack((N_list, err_list))\n",
+    "        \n",
+    "task5()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[    1.   202.     5.]\n",
+      " [   10.   225.    19.]\n",
+      " [   50.   186.    21.]\n",
+      " [  100.   127.     9.]\n",
+      " [  500.   135.     3.]\n",
+      " [ 1000.    99.     1.]\n",
+      " [ 5000.    67.     0.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAH6xJREFUeJzt3Xt4VNW9xvHvjxACCBEDyjUVBIIgHm8FqlaJ2ipHPVZL\nK7ZqtdZ7pdqe1iLVQqvipUePitZjH62PPl5aL+egttBWrUFFBaqACHILgoIQhaDcAiHJOn+sHXJh\nkkwmmew9O+/neebJXPbM/LLEd6+svfba5pxDRETiq0PYBYiISHop6EVEYk5BLyIScwp6EZGYU9CL\niMScgl5EJOYaDXozyzez18xsiZl9YGY/CZ6fambrzGxBcPv3Wu+5wcxWmtkyMzs13b+AiIg0zhqb\nR29mfYA+zrmFZtYNeBc4GzgX2Oacu7ve9iOAp4BRQH/gFaDAOVeVpvpFRKQJjfbonXMbnXMLg/vb\ngQ/xAQ5gCd7yLeBp59we59waYBUwuvXKFRGR5kp6jN7MBgJHAe8ET000s0Vm9oiZ9Qie6wesq/W2\nddTsGEREJARJBX0wbPMccG3Qs38QGAQcCWwA7mrk7VpjQUQkRB2b2sDMsoHngSecczMAnHOf1Xr9\nYeCl4OF6IL/W2wcEz9X/TIW/iEgKnHOJhs0b1dSsGwMeAZY65+6p9XzfWpudAywO7r8InGdmncxs\nEDAUmNdAsZG/TZkyJfQa4lJnJtSoOlVn1G+paqpHfzxwAfC+mS0InpsMfM/MjsQPy3wEXBGE91Iz\newZYClQAV7uWVCciIi3WaNA7594kca9/ViPvmQZMa2FdIiLSSnRmbCMKCwvDLiEpmVBnJtQIqrO1\nqc5oaPSEqbR9qZlGdEREmsnMcK19MFZERDKfgl5EJOYU9CIiMaegFxGJOQW9iEjMKehFRGJOQS8i\nEnMKehGRmFPQi4jEnIJeRCTmFPQiIjGnoBcRiTkFvYhIzCnoRURiTkEvIhJzTV4cXKLp009h9mxY\nuhQuvRQOPjjsikQkqtSjzxBr18Ljj8OPfgRDh8Lhh8Mzz8CXX8Ixx8DNN8OuXWFXKSJRpCtMRZBz\nUFzse+yvv+5/lpXB2LFw4on+52GHQYdgN712LfzsZ7BwIdx7L5x5Zrj1i0h6pHqFKQV9BDgHy5bV\nhPrs2f75sWNrbsOGgTXxn/cf/4Cf/MT3+O+5BwYPTn/tItJ2FPQZpKoKliypCfXXX4cuXeoG+yGH\nNB3siZSX+5C/80646iq44Qbo2rX1fwcRaXsK+girrIRFi2qC/Y03IC+vJtRPPLH1D6auWwe/+AW8\n/TbcfTecc05qOw4RiQ4FfYTs2QPvvVfTW58zB/r2rTvG3q9f29RSVATXXOO/b/p0PwQkIplJQR+i\n3bth/vyaMfa334ZBg2pC/cQT4aCDwqtvzx544AG49Va45BK48Ubo3j28ekQkNQr6NlRWBnPn1gzF\nzJ8PBQU1QzEnnOCHZqJm40aYNAlefRV+9zuYMEHDOSKZREGfRjt2wFtv1QT7ggUwcmRNsB9/POy/\nf9hVJm/OHD+c06OHH84ZOTLsikQkGQr6VrR1K7z5Zs0Y++LFcNRRNcF+7LHQrVvYVbZMZSU89BBM\nnQrnn+9/ZtLOSqQ9UtC3QGlpTbDPng3Ll8OoUTXj61/7mp/+GEeffw6/+hX85S9w221w4YU1J2KJ\nSLQo6Jvhs8/8FMfqYP/oI99Lrz54OmoU5OSEVl4o5s3zwznZ2XD//f4vGBGJFgV9IzZsqAn12bP9\ngmDHH18zFHP00T7g2ruqKnj0Ud/D//a34ZZbonlQWaS9UtDX8vHHdc863bzZz4SpDvYjjoCsrLR9\nfcYrLYVf/xqefdaH/Y9+pOEckShot0HvHKxeXXedmB076p51OnKkgioVCxf64Zzycj+cM3p02BWJ\ntG/tJuidgxUr6g7FOFf3rNNDD9X88NbiHDzxBPzyl3D66f6A7YEHhl2VSPsU26CvqvIX16g9FJOT\nU3cBsMGDFezp9uWX8Jvf+NCfMgWuuAI66rI1Im0qNkFfWQnvv18T6q+/7k/sqR3suppSeJYs8cM5\nW7b4ZRWOPz7sikTaj7QEvZnlA48DBwEO+INz7j4zywP+DBwMrAHOdc59EbznBuASoBL4iXPuHwk+\nd2/QV1TUXQDszTehT5+6Y+z9+zf315J0cs5f3ernP4eTToI77vCLtolIeqUr6PsAfZxzC82sG/Au\ncDbwQ2CTc+5OM/slcIBzbpKZjQCeAkYB/YFXgALnXFW9z3XTprm9C4AdfHDddWJ6927uryFh2L7d\nz8p55BGYPLlmHr6IpEebDN2Y2Qzg/uA21jlXEuwMipxzhwa9+Srn3B3B9n8Dpjrn3qn3Oe6669ze\nYO/Zs7llS5QsX+6vbLVunZ+dc9JJYVckEk9pD3ozGwjMBkYCHzvnDgieN6DUOXeAmU0H3nHOPRm8\n9jAwyzn3fL3PitQSCNJyzsGMGfDTn8KYMXDXXTBgQNhVicRLqkGf1LyJYNjmeeBa59w2qzXFxTnn\nzKyx1E742tSpU/feLywspLCwMJlSJKLM/FWsTjvNj9kfeaQfw//pT9vfchIiraWoqIiioqIWf06T\nPXozywb+gu+Z3xM8twwodM5tNLO+wGvB0M0kAOfc7cF2fwOmOOfm1vtM9ehjrrjYh/zy5XDffX4H\nICItk2qPvtHzRYNhmUeApdUhH3gRuCi4fxEwo9bz55lZJzMbBAwF5jW3KMl8gwfDiy/669X++Me+\nt79mTdhVibRPTS0McDxwAXCSmS0IbuOA24FvmtkK4OTgMc65pcAzwFJgFnC1uu7t2xlnwAcfwDHH\n+Ntvfwu7doVdlUj7ErkTpiS+1q6F//xPf4Wue+6BM8/UGc0izRGbM2Ml/l5+GSZO9MM7994LQ4aE\nXZFIZkjLGL1IOnzzm36Zi8JCf/WuG2/0K46KSHoo6CUUnTrBL34Bixb5ZaZHjIDnn/fz8UWkdWno\nRiJh9my/hEKfPn465vDhYVckEj0aupGMNnasX9zuzDP9QnbXXw/btoVdlUg8KOglMrKz4dpr/XTM\nzz/3vfqnntJwjkhLaehGIuutt/xwTvfufrG0ww8PuyKRcGnoRmLnuONg/nz43vfglFPg4YfDrkgk\nM6lHLxnhgw/gG9/wM3S6dg27GpFwqEcvsTZyJBx7rL/IiYg0j3r0kjHmz4fx42HVKj8PX6S9UY9e\nYm/UKDj0UHjiibArEcks6tFLRikqgssvhw8/hKyssKsRaVvq0Uu7MHYsHHigXy5BRJKjoJeMYgaT\nJ8O0aTqRSiRZCnrJOKef7n/OnBluHSKZQkEvGae6V3/rrerViyRDQS8Zafx42LzZr3opIo1T0EtG\nysqCSZN8r15EGqegl4x1/vmwYgXMmxd2JSLRpqCXjFV9lapp08KuRCTadMKUZLSyMjjkEH/B8ZEj\nw65GJL10wpS0S126wHXXwe23h12JSHSpRy8Zb+tWGDwY3nnH/xSJK/Xopd3KzYWrroI77wy7EpFo\nUo9eYmHTJigogMWLoX//sKsRSQ/16KVd69ULLr4Y7ror7EpEokc9eomN9ev9BcRXrPDBLxI36tFL\nu9e/P3z3u3DvvWFXIhIt6tFLrKxeDaNHQ3Ex7L9/2NWItC716EXwJ0+NGwcPPhh2JSLRoR69xM6S\nJXDKKb5337Vr2NWItB716EUChx0Gxx4LjzwSdiUi0aAevcTS/Pl+zfpVq/ziZyJxoB69SC2jRsGh\nh8ITT4RdiUj4mgx6M/ujmZWY2eJaz001s3VmtiC4/Xut124ws5VmtszMTk1X4SJNmTzZL3ZWWRl2\nJSLhSqZH/ygwrt5zDrjbOXdUcJsFYGYjgAnAiOA9vzcz/dUgoRg7Fg48EJ57LuxKRMLVZAg7594A\ntiR4KdE40beAp51ze5xza4BVwOgWVSiSouqLiE+bpouIS/vWkt72RDNbZGaPmFmP4Ll+wLpa26wD\ntMSUhOb0033g//WvYVciEp5Ug/5BYBBwJLABaGwpKfWlJDTVvfpbb1WvXtqvjqm8yTn3WfV9M3sY\neCl4uB7Ir7XpgOC5fUydOnXv/cLCQgoLC1MpRaRJ48fDTTfB7Nmgf2aSSYqKiigqKmrx5yQ1j97M\nBgIvOecODx73dc5tCO7/FBjlnPt+cDD2Kfy4fH/gFWBI/Unzmkcvbe3RR+Gpp/y1ZUUyVarz6JsM\nejN7GhgL9AJKgClAIX7YxgEfAVc450qC7ScDlwAVwLXOub8n+EwFvbSpPXtgyBB49lm/6JlIJkpb\n0KeDgl7CcP/98MorMGNG2JWIpEZBL9KEsjK/uuXLL8PIkWFXI9J8WgJBpAldusB118Ftt4VdiUjb\nUo9e2pWtW32vfu5cGDw47GpEmkc9epEk5ObC1VfDHXeEXYlI21GPXtqdTZugoAAWL/bXmRXJFOrR\niySpVy/44Q/hrsbO5xaJEfXopV369FM/82bFCh/8IplAPXqRZujXD849F+69N+xKRNJPPXppt1av\n9mfJFhfD/vuHXU3bcM4fo9i40V9bt4O6ehlFJ0yJpOCCC/wQzqRJYVfSOqqqYMMGWLMG1q6tuVU/\n/vhjfz5BdjZceCHceWfYFUtzKOhFUrBkCZxyiu/dd+0adjVN27MH1q1rOMjXr4e8PDj44JrbwIF1\nH3frBps3w1e/Cr/7HXznOyH/UpI0Bb1Iis45B04+GSZODLsSv0zDxx83HOSffQZ9+zYc5Pn50Llz\nct/13ntw2mnw+uswfHgafylpNQp6kRTNn+/XrF+1Cjp1Su93bd26b4jXDvIvv/RhXb8XXv24f3/o\nmNJVJBJ79FF/8ti8ef5kMok2Bb1IC5x6Kpx3HlxySeqf4ZwfEmmoN752rR96STScUv24d++2P0B6\n5ZX+AO2zz/orckl0KehFWmD2bLjsMvjwQ8jKSrxNVZWfrdJYkOfkNB7keXnRC9Pdu+HEE/1fNddf\nH3Y10hgFvUgLOAdf/7qfhTN8eOIgX7cOevRIPDZefb9795B/kRR98omfavrkk/54hUSTgl6khV57\nDS6/HPr0Sdwr/8pX/NTEuPrnP+H88/14fX5+09tL21PQi0iL3XknPP+8n4mTkxN2NVKfgl5EWsw5\n+O53/fo///M/YVcj9WmtGxFpMTM/5XL2bP9T4kE9ehHZx4cf+pk4f/sbHHNM2NVINfXoRaTVDB8O\nDz7ol0fYvDnsaqSl1KMXkQZdfz0sWgQzZzZ8foG0HfXoRaTVTZvmz+adMiXsSqQlFPQi0qCOHeFP\nf4LHH4cXXwy7GkmVhm5EpElz58J//AfMmQNDh4ZdTfuloRsRSZsxY+C3v4Vvfxt27Ai7Gmku9ehF\nJCnO+dU9d+2Cp56K3uJs7YF69CKSVmbw+9/D8uVw331hVyPNoR69iDTLRx/B174Gzz0HJ5wQdjXt\ni3r0ItImBg3ys3DOOw8+/TTsaiQZCnoRabbTToOrrvILoJWXh12NNEVDNyKSkqoqOPtsv26/xuzb\nhoZuRKRNdejgh3BmzYInngi7GmmMevQi0iKLF/vLD776Kvzbv4VdTbypRy8ioTj8cLj3Xn8y1Rdf\nhF2NJNJk0JvZH82sxMwW13ouz8xeNrMVZvYPM+tR67UbzGylmS0zs1PTVbiIRMf3vw9nnAEXXujH\n7iVakunRPwqMq/fcJOBl51wB8GrwGDMbAUwARgTv+b2Z6a8GkXbgv/4LtmyBW28NuxKpr8kQds69\nAWyp9/RZwGPB/ceAs4P73wKeds7tcc6tAVYBo1unVBGJsuxsePZZf63ZWbPCrkZqS7W33ds5VxLc\nLwF6B/f7AetqbbcO6J/id4hIhunbF/78Z7j4Yli9OuxqpFqLh1WC6TONTaHR9BqRduTrX4df/QrG\nj4eysrCrEYCOKb6vxMz6OOc2mllf4LPg+fVAfq3tBgTP7WPq1Kl77xcWFlJYWJhiKSISNRMnwoIF\ncMQRMHkynH++H9qR5ikqKqKoqKjFn5PUPHozGwi85Jw7PHh8J7DZOXeHmU0CejjnJgUHY5/Cj8v3\nB14BhtSfNK959CLx5xzMnu3XsV+zBiZNgosugpycsCvLXKnOo28y6M3saWAs0As/Hv9r4AXgGeAr\nwBrgXOfcF8H2k4FLgArgWufc3xN8poJepB2ZMwduuQWWLPEXHL/0UujcOeyqMk/agj4dFPQi7dP8\n+T7w58+Hn/8crrgC9tsv7Koyh86MFZHIGzUKXngBZs6Et9+GwYPh9tth27awK4s3Bb2ItLkjj/Rz\n7l99Fd5/Hw45xI/lawmF9FDQi0hoDjvMX392zhx/5aohQ+DGG2Hz5rArixcFvYiErqAAHn3Uj91/\n/rl/fP31UFLS9HulaQp6EYmMQYPgoYdg4ULYuROGD4frroP1Cc/GkWQp6EUkcvLz4f77/XTMDh38\nUshXXw1r14ZdWWZS0ItIZPXtC3ffDcuWQW4uHH20n4NfXBx2ZZlFQS8ikXfQQX4a5ooV0K8fjBkD\nP/gBLF8edmWZQUEvIhmjZ08/DbO42B+wPeEEOO88+OCDsCuLNgW9iGSc/ff30zCLi/1wzje+4S9l\nuGBB2JVFk4JeRDJW9+5+Gubq1XDiiXDmmf42d27YlUWLgl5EMl7Xrn4aZnExnH46nHsunHoqvPFG\n2JVFgxY1E5HYKS+Hxx+H227zUzVvuglOPhms2cuBRYtWrxQRqaeiwi+xcOut/kDuTTfBuHGZG/gK\nehGRBlRW+kXUbrkFunTxB3LPOivzAl9BLyLShKoqmDEDbr7Z37/xRn9t2w4ZcrRSQS8ikiTn4K9/\n9YG/bZu/mPmECdAx1atotxEFvYhIMzkHL7/sA3/jRn8h8wsuiO6FzBX0IiIpqr6Q+c03+zn5kybB\nxRdH70LmupSgiEiKzKCw0F/x6skn/Tj+kCF+Bc2ysrCrazkFvYhILccdB7Nmwf/+rx/WGTwY7roL\nduwIu7LUKehFRBKovpD5rFnwzjv+ura33QZbt4ZdWfMp6EVEGnHEEX4O/muv+VUyBw+G3/wGtmwJ\nu7LkKehFRJIwYoQfv58zB9asgaFD/Tz8TZvCrqxpCnoRkWaofyHzYcP8CpoVFWFX1jAFvYhICmpf\nyHzAgGifbKV59CIiGULz6EVEJCEFvYhIzCnoRURiTkEvIhJzCnoRkZhT0IuIxJyCXkQk5hT0IiIx\np6AXEYm5Fp20a2ZrgK1AJbDHOTfazPKAPwMHA2uAc51zX7SwThERSVFLe/QOKHTOHeWcGx08Nwl4\n2TlXALwaPBYRkZC0xtBN/XUXzgIeC+4/BpzdCt8hIiIpao0e/Stm9i8zuyx4rrdzriS4XwL0buF3\niIhIC7R0Yc3jnXMbzOxA4GUzW1b7ReecM7OEy1ROnTp17/3CwkIKCwtbWIqISLwUFRVRVFTU4s9p\ntWWKzWwKsB24DD9uv9HM+gKvOecOrbetlikWEWmmNl+m2My6mln34P5+wKnAYuBF4KJgs4uAGal+\nh4iItFzKPXozGwT8X/CwI/Ckc+62YHrlM8BXaGB6pXr0IiLNl2qPXleYEhHJELrClIiIJKSgFxGJ\nOQW9iEjMKehFRGJOQS8iEnMKehGRmFPQi4jEnIJeRCTmFPQiIjGnoBcRiTkFvYhIzCnoRURiTkEv\nIhJzCnoRkZhT0IuIxJyCXkQk5hT0IiIxp6AXEYk5Bb2ISMwp6EVEYq5j2AVI+1JZVcnuyt3sqtjF\nropd7K6ouV/7Vnub6ltBzwLGDRlHB1P/RKQ5zDnX9l9q5sL43vbOOZcwQBOFbbLb7aps3vsrqirI\n6ZhD546d97nlZO37fE7HHDpn+Z9vffIWW3Zt4cejfswlR11Cj849wm5SkTZlZjjnrNnvU9BnltKy\nUlZsXrH3VrylmB3lO5IK2vLKcnKycpoXtA2Fb3OCutbj7A7ZmDX73yngd1Rz189l+rzpzFw5kwmH\nTeCa0dcw8qCRrdzKItGkoI+Rsj1lFG8pZvmm5T7QS32oL9+0nPLKcob1GkZBzwIK8goYnDeY3Jzc\nhCFbP2g7ZXWKzbDHhm0b+MO7f+Chdx9iWK9hTBw9kbOGnUXHDhqNlPhS0GeYyqpKPv7y4zq98+Wb\nfbBv3L6RQQcMYljPINCD27Cewzhov4NS7hHHUXllOc8vfZ7p86azftt6rvrqVVx69KX06tor7NJE\nWp2CPoKcc2zaualOiNcecjmw64F1Qrz6/sE9DlbPNAXvfvou98+/nxnLZnDOoecwcfREjup7VNhl\nibQaBX2IdpTvYGXpyn165is2rwBgWM9hfrglr6Z3PrTnULpmdw258nj6fMfnPPzewzz4rwfJ3z+f\niaMnMn74eLKzssMuTaRFFPRpVlFVwZov1uwdK689dr5p5yaG5A3ZO26+dwy9ZwE9u/TUUEtIKqoq\neGHZC0yfN52VpSu54pgruPyYy+nTrU/YpYmkREHfCpxzbNy+MeG4+Zov1tC3e999hlkKehaQn5tP\nVoessMuXRrxf8j4PzHuAZ5Y+wxlDz2Di6ImMGTAm7LJEmkVB3wxbd29l5eaVCcfOO3fsvM8B0IKe\nfnZL546dQ6tZWseWsi38ccEfeWD+A/Tq2otrRl/DhMMmkNMxJ+zSRJqkoK+nvLKc1VtWJ+ydb929\nlaF5Q/fpnQ/tOZS8LnlprUuiobKqkpkrZzJ93nQWlSzisqMv48qvXsmA3AFhlybSoHYZ9M451m9b\nn3Dc/JMvPyF///y94+Z7e+i9htGve7/YzCeXllu2aRkPzHuAJxc/ydF9j2ZA7gD6dOtD7/16+5/d\neu99nNclT8dcJDSxDvotZVvq9MxXlPpgX1m6ktyc3IQHQQ854BA6ZXVK428hcbN191be/PhNNm7f\nSMn2Ev9zR83Pku0lbC/fzkH7HVQn/OvvFKrv9+jcQzsFaVUZH/S7KnZRXFqccNy8rKIs4clDQ3sO\nJTcnt83rl/Zrd8VuPtvxWd2dQK2dQu3nyirK6L1f76R2Crk5udopSJMyLuinz51eZ+x8w7YNDOwx\nMOEJRH269dH/BJJxyvaUJb1TKK8s32eYqKGdQrdO3fT/QzsVqaA3s3HAPUAW8LBz7o56r7srX7qy\nTg990AGDdDaotFs79+zcd7gowU5h4/aNOOca3CnUf26/TvuF/atJK4pM0JtZFrAc+AawHpgPfM85\n92GtbSI5j76+oqIiCgsLwy6jSZlQZybUCJlR5/by7bzwtxcYeOTAOjuF2scTqncKWZa1z06heifQ\nq2sv8rrk1bl1ze7aqn8tZEJ7QubUmWrQp6MLPRpY5ZxbA2BmfwK+BXzY2JuiKFP+42dCnZlQI2RG\nnd06dWPleys5/6zzG93OOce28m11/zII7r+74V02l22mtKyUzTv9z9KyUipdJXld8ujZpec+O4FE\nt+rtGhpOyoT2hMypM1XpCPr+wCe1Hq8DdAqiSBszM3JzcsnNyWVoz6FJvadsTxlbdm3ZG/z1dwRr\nv1hL6a7SfV7fXbk74Y5g6YqllM4qJcuy6NihY9K3rA7N3D6Fz29PU6zTEfTRH5MRkYS6ZHehS3YX\n+nXv16z37a7YnXAHsWk/vw5URVXF3ltlVSUVVRXs3LOzzvN1bq7utsncKl3y21ZUVWDY3uCvfKOS\n++64L+UdT4/OPXh6/NNp+q/ScukYo/8aMNU5Ny54fANQVfuArJlpZyAikoKoHIztiD8YewrwKTCP\negdjRUSk7bT60I1zrsLMrgH+jp9e+YhCXkQkPKGcMCUiIm0nrYedzWycmS0zs5Vm9ssGtrkveH2R\nmbX5dd+aqtHMCs3sSzNbENxuDKHGP5pZiZktbmSbUNsxqKHROqPQlkEd+Wb2mpktMbMPzOwnDWwX\n9r/NJuuMQpuaWWczm2tmC4M6pzawXdjt2WSdUWjPoI6s4PtfauD15rWlcy4tN/ywzSpgIJANLASG\n19vmdGBmcH8M8E666mlBjYXAi21ZV4I6TwCOAhY38Hqo7diMOkNvy6COPsCRwf1u+GNKkfq32Yw6\no9KmXYOfHYF3gDFRa88k64xKe/4MeDJRLam0ZTp79HtPnHLO7QGqT5yq7SzgMQDn3Fygh5n1TmNN\nqdQIEOrCIs65N4AtjWwSdjsSfHdTdULIbQngnNvonFsY3N+OP5mv/nzC0Ns0yTohGm26M7jbCd9p\nqqq3SejtGXx3U3VCyO1pZgPwYf5wA7U0uy3TGfSJTpzqn8Q2bXnlh2RqdMBxwZ9IM81sRJtVl7yw\n2zFZkWtLMxuI/ytkbr2XItWmjdQZiTY1sw5mthAoAf7hnJtfb5NItGcSdUahPf8b+AWJd0KQQlum\nM+iTPcpbf4/VlkeHk/mu94B859wRwHRgRnpLSlmY7ZisSLWlmXUDngOuDXrM+2xS73EobdpEnZFo\nU+dclXPuSHzgjDGzwxJsFnp7JlFnqO1pZmcCnznnFtD4XxbNast0Bv16IL/W43z8nqexbQYEz7WV\nJmt0zm2r/nPPOTcLyDazqF1vMOx2TEqU2tLMsoHngSecc4n+Z45EmzZVZ5TaNKjhS+A1YFy9lyLR\nntUaqjMC7XkccJaZfQQ8DZxsZo/X26bZbZnOoP8XMNTMBppZJ2AC8GK9bV4EfgB7z6j9wjlXksaa\nml2jmfW2YLUmMxuNn5Ja2oY1JiPsdkxKVNoyqOERYKlz7p4GNgu9TZOpMwptama9zKxHcL8L8E32\nXcQwCu3ZZJ1ht6dzbrJzLt85Nwg4D/inc+4H9TZrdlumbQF418CJU2Z2RfD6Q865mWZ2upmtAnYA\nP0xXPanWCHwHuMrMKoCd+MZvU2b2NDAW6GVmnwBT8AeSItGOydZJBNoycDxwAfC+mS0InpsMfAUi\n1aZN1kk02rQv8Jj5Jco7AH8O2i8y/68nWyfRaM/aHEBL21InTImIxFz7WadTRKSdUtCLiMScgl5E\nJOYU9CIiMaegFxGJOQW9iEjMKehFRGJOQS8iEnP/D6ekfcT4px3zAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x106f8b0d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def task6():\n",
+    "    repeat_list = [1, 10, 50, 100, 500, 1000, 5000]\n",
+    "    err_list = []\n",
+    "    train_err_list = []\n",
+    "    minibatch_size = 10\n",
+    "    for R in repeat_list:\n",
+    "        x_copy = np.copy(x)\n",
+    "        x_copy = x_copy[0:50]\n",
+    "        t_copy = np.copy(t)\n",
+    "        t_copy = t_copy[0:50]\n",
+    "        \n",
+    "        # initialize w, since x is 64-D need +1 to make x0 = 1\n",
+    "        x_copy = np.column_stack((np.ones(x_copy.shape[0]), x_copy))\n",
+    "        w = np.random.rand(x_copy.shape[1])\n",
+    "\n",
+    "        train_list = grad_desc(x_copy, t_copy, w, minibatch_size, repeats=R)\n",
+    "        \n",
+    "        # validation set\n",
+    "        x_eval_copy = np.copy(x_eval)\n",
+    "        x_eval_copy = np.column_stack((np.ones(x_eval_copy.shape[0]), x_eval_copy))\n",
+    "        y_estimate = x_eval_copy.dot(w)\n",
+    "\n",
+    "        y_round = [0 if num < 0.5 else 1 for num in y_estimate]\n",
+    "        y_round = np.array(y_round)\n",
+    "        y_round = y_round.reshape((t_eval.shape[0], 1))\n",
+    "        \n",
+    "        err_list.append(np.sum(np.abs(t_eval - y_round)))\n",
+    "        \n",
+    "        # training set\n",
+    "        train_list = train_list.astype(int)\n",
+    "        x_tra = x_copy[train_list]\n",
+    "        y_estimate_tra = x_tra.dot(w)\n",
+    "        y_round_tra = [0 if num < 0.5 else 1 for num in y_estimate_tra]\n",
+    "        y_round_tra = np.array(y_round_tra)\n",
+    "        y_round_tra = y_round_tra.reshape((t_copy[train_list].shape[0], 1))\n",
+    "        train_err_list.append(np.sum(np.abs(t_copy[train_list] - y_round_tra)))\n",
+    "\n",
+    "    np.set_printoptions(suppress=True)\n",
+    "    print np.column_stack((repeat_list, err_list, train_err_list))\n",
+    "    plt.plot(np.log10(repeat_list), err_list, np.log10(repeat_list), train_err_list)\n",
+    "    \n",
+    "task6()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0.       85.    ]\n",
+      " [   0.0001   87.    ]\n",
+      " [   0.001    78.    ]\n",
+      " [   0.01    113.    ]\n",
+      " [   0.1      64.    ]\n",
+      " [   0.5      57.    ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def task7():\n",
+    "    lamb_list = [0, 0.0001, 0.001, 0.01, 0.1, 0.5]\n",
+    "    err_list = []\n",
+    "    train_err_list = []\n",
+    "    minibatch_size = 10\n",
+    "    for lamb in lamb_list:\n",
+    "        x_copy = np.copy(x)\n",
+    "        x_copy = x_copy[0:50]\n",
+    "        t_copy = np.copy(t)\n",
+    "        t_copy = t_copy[0:50]\n",
+    "        \n",
+    "        # initialize w, since x is 64-D need +1 to make x0 = 1\n",
+    "        x_copy = np.column_stack((np.ones(x_copy.shape[0]), x_copy))\n",
+    "        w = np.random.rand(x_copy.shape[1])\n",
+    "        \n",
+    "        train_list = grad_desc(x_copy, t_copy, w, minibatch_size, lamb=lamb, repeats=1000)\n",
+    "        \n",
+    "        # validation set\n",
+    "        x_eval_copy = np.copy(x_eval)\n",
+    "        x_eval_copy = np.column_stack((np.ones(x_eval_copy.shape[0]), x_eval_copy))\n",
+    "        y_estimate = x_eval_copy.dot(w)\n",
+    "\n",
+    "        y_round = [0 if num < 0.5 else 1 for num in y_estimate]\n",
+    "        y_round = np.array(y_round)\n",
+    "        y_round = y_round.reshape((t_eval.shape[0], 1))\n",
+    "        \n",
+    "        err_list.append(np.sum(np.abs(t_eval - y_round)))\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        # training set\n",
+    "        train_list = train_list.astype(int)\n",
+    "        x_tra = x_copy[train_list]\n",
+    "        y_estimate_tra = x_tra.dot(w)\n",
+    "        y_round_tra = [0 if num < 0.5 else 1 for num in y_estimate_tra]\n",
+    "        y_round_tra = np.array(y_round_tra)\n",
+    "        y_round_tra = y_round_tra.reshape((t_copy[train_list].shape[0], 1))\n",
+    "        train_err_list.append(np.sum(np.abs(t_copy[train_list] - y_round_tra)))\n",
+    "        \"\"\"\n",
+    "        \n",
+    "    print np.column_stack((lamb_list, err_list))\n",
+    "    \n",
+    "task7()"
+   ]
   }
  ],
  "metadata": {
